--- a/app/src/main/res/layout/fragment_workout_detail.xml
+++ b/app/src/main/res/layout/fragment_workout_detail.xml
@@ -4,10 +4,24 @@
              android:layout_height="match_parent"
              tools:context="com.tbvanderleystudios.workouts.WorkoutDetailFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment"/>
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/workoutTitleTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            tools:text="Core Agony"/>
+
+        <TextView
+            android:id="@+id/workoutDescriptionTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Workout descriptions would go here\n so"/>
+
+    </LinearLayout>
 
 </FrameLayout>
