Fixed issue with casting findFragmentById to WorkoutDetailFragment. The wrong Fragment was being extended. We needed to extend the Fragment that is from android.app.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
 
     <fragment
         android:id="@+id/detailFragment"
-        class="com.tbvanderleystudios.workouts.WorkoutDetailFragment"
+        android:name="com.tbvanderleystudios.workouts.WorkoutDetailFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout="@layout/fragment_workout_detail"/>
