--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,13 +8,21 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="horizontal"
     tools:context="com.tbvanderleystudios.workouts.MainActivity">
 
     <fragment
-        android:id="@+id/detailFragment"
-        android:name="com.tbvanderleystudios.workouts.WorkoutDetailFragment"
-        android:layout_width="match_parent"
+        android:id="@+id/listFragment"
+        android:name="com.tbvanderleystudios.workouts.WorkoutListFragment"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_weight="2"/>
+
+    <FrameLayout
+        android:id="@+id/detailFragmentContainer"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="3"
         tools:layout="@layout/fragment_workout_detail"/>
 
-</RelativeLayout>
+</LinearLayout>
