--- a/app/src/main/res/layout/fragment_workout_detail.xml
+++ b/app/src/main/res/layout/fragment_workout_detail.xml
@@ -22,6 +22,11 @@
             android:layout_height="wrap_content"
             tools:text="Workout descriptions would go here\n so"/>
 
+        <FrameLayout
+            android:id="@+id/stopwatchFramLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
     </LinearLayout>
 
 </FrameLayout>
