--- a/app/src/main/res/layout/fragment_stopwatch.xml
+++ b/app/src/main/res/layout/fragment_stopwatch.xml
@@ -21,7 +21,8 @@
         android:layout_below="@+id/timerTextView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:text="@string/start_button"/>
+        android:text="@string/start_button"
+        android:onClick="onClickStart"/>
 
     <Button
         android:id="@+id/stopButton"
@@ -30,7 +31,8 @@
         android:layout_below="@+id/startButton"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:text="@string/stop_button"/>
+        android:text="@string/stop_button"
+        android:onClick="onClickStop"/>
 
     <Button
         android:id="@+id/resetButton"
@@ -39,6 +41,7 @@
         android:layout_below="@+id/stopButton"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:text="@string/reset_button"/>
+        android:text="@string/reset_button"
+        android:onClick="onClickStop"/>
 
 </RelativeLayout>
